@@ -1,3 +1,10 @@
+Mon Aug 18 16:39:29 1997  Carlos O'Ryan  <coryan@mambo.cs.wustl.edu>
+
+	* tao/Makefile: 
+	* tests/Demux_Test/CodeGen/Makefile: 
+	  $(SOEXT) must be used instead of just .so, the former does not
+	  work on all platforms, notably HP-UX.
+
 Sun Aug 17 16:53:42 1997  Carlos O'Ryan  <coryan@swarm.cs.wustl.edu>
 
 	* IIOP/test/Orbeline/client/Profile_Timer.h: 
