@@ -1,3 +1,9 @@
+Mon Aug 18 16:39:40 1997  Carlos O'Ryan  <coryan@mambo.cs.wustl.edu>
+
+	* Makefile: 
+	  $(SOEXT) must be used instead of just .so, the former does not
+	  work on all platforms, notably HP-UX.
+
 Thu Jun 26 10:02:47 1997  Aniruddha Gokhale  <gokhale@merengue.cs.wustl.edu>
 
 	* Some more progress. Generates the client and server side files
